agregado lo de Fitt, actualizado el marco teórico con lo de las interfaces y el diseño de interfaz en el AyD

--- a/bibtex_references/ReferenciasFaseI.bib
+++ b/bibtex_references/ReferenciasFaseI.bib
@@ -271,7 +271,9 @@ annote = {Hace justo lo que ocupo, una buena gu\'{\i}a para la m\'{\i}a propia.
 Qu\'{e} me sirve de \'{e}sta:
 * Campos relacionados
 * Adaptaci\'{o}n Vs. Contextualizaci\'{o}n (aprender del usuario o de la tarea que se realiza)
+
         
+
       },
 author = {Safran, Christian},
 booktitle = {Information Systems},
@@ -1475,4 +1477,19 @@ editor = {{S\'{a}nchez Gonzales}, Carmelo},
 publisher = {McGraw-Hill},
 title = {{Fundamentos de sistemas operativos}},
 year = {2005}
+}
+@article{Fitts1992,
+author = {Fitts, P M},
+file = {:media/Datos/Lebrixen/Fase\_I/Bibliografia/Miscelanea/1954-Fitts.pdf:pdf},
+issn = {0096-3445},
+journal = {Journal of experimental psychology. General},
+keywords = {Adult,Female,History, 20th Century,Humans,Male,Models, Psychological,Motor Activity,Motor Activity: physiology,Movement,Psychology, Experimental,Research Design,Task Performance and Analysis},
+month = {septiembre},
+number = {3},
+pages = {262--9},
+pmid = {1402698},
+title = {{The information capacity of the human motor system in controlling the amplitude of movement. 1954.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/1402698},
+volume = {121},
+year = {1992}
 }
