--- a/MarcoTeorico_10611066.lyx
+++ b/MarcoTeorico_10611066.lyx
@@ -9665,12 +9665,439 @@ te (aún cuando GET sólo debería utilizarse para obtener recursos y POST
  para actualizarlos).
 \end_layout
 
+\begin_layout Section
+Diseño de interfaces
+\end_layout
+
+\begin_layout Standard
+La investigación en el diseño de interfaces se ha convertido en todo un
+ campo de estudio, trascendiendo lineamientos empíricos y tomando elementos
+ de la psicología cognitiva para estudiar las experiencias de usuario.
+ Así, aunque aspectos subjetivos como la creatividad y el buen gusto del
+ diseñador aún juegan un papel crucial, es menester tener en cuenta el efecto
+ psicológico del diseño de una interfaz en cómo el usuario percibe la utilidad
+ del sistema, factor indiscutiblemente decisivo a la hora de evaluar éste.
+\end_layout
+
+\begin_layout Subsection
+Aspectos psicológicos del diseño de interfaces
+\end_layout
+
+\begin_layout Standard
+Antes de ahondar de las consideraciones relacionadas a la división de atención
+ y experiencia de usuario en la siguiente sección, se cubrirán aquí un par
+ de aspectos generales.
+\end_layout
+
+\begin_layout Subsubsection
+La ley de Fitt
+\end_layout
+
+\begin_layout Standard
+La ley de Fitt, propuesta por 
+\begin_inset CommandInset citation
+LatexCommand citet
+key "Fitts1992"
+
+\end_inset
+
+, establece que: 
+\end_layout
+
+\begin_layout Quotation
+\begin_inset Quotes eld
+\end_inset
+
+El tiempo para adquirir un objetivo es una función de la distancia a la
+ que se halla y de su tamaño
+\begin_inset Quotes erd
+\end_inset
+
+.
+ 
+\end_layout
+
+\begin_layout Standard
+Expresada en la siguiente fórmula:
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula \begin{equation}
+t=a+b*\log_{2}(\frac{D}{S+1})\end{equation}
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Donde 
+\emph on
+D 
+\emph default
+representa la distancia entre el punto inicial del movimiento y 
+\emph on
+S
+\emph default
+ es la anchura del objetivo.
+ Establecido esto, esta ley se puede simplificar y decir que, para hacer
+ la navegación más fácil, se habrán de poner los elementos más cerca entre
+ sí o hacer los elementos utilizables más grandes.
+ Y aunque esto parezca obvio, muchas veces el inverso es ignorado
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+\begin_inset Flex URL
+status collapsed
+
+\begin_layout Plain Layout
+
+http://www.codinghorror.com/blog/2010/03/the-opposite-of-fitts-law.html
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+: elementos que no están relacionados o que no se desea que se utilicen
+ con demasiada frecuencia (como botones de borrado, por ejemplo) deberían
+ estar más lejos o ser más pequeños que los que se utilizan más o cumplen
+ funciones críticas.
+ De la misma manera, se puede hacer notar un corolario de esta ley: los
+ elementos en los bordes se pueden considerar de tamaño infinito hacia el
+ lado del borde
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+\begin_inset Flex URL
+status collapsed
+
+\begin_layout Plain Layout
+
+http://www.codinghorror.com/blog/2006/08/fitts-law-and-infinite-width.html
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+, por lo que se deben aprovechar los bordes naturales de la pantalla de
+ presentación en interfaces de software.
+\end_layout
+
+\begin_layout Subsubsection
+El principio del menor esfuerzo
+\end_layout
+
+\begin_layout Standard
+El principio del menor esfuerzo, aplicado al comportamiento humano por G.
+ K.
+ Zipf en 1949, dicta que 
+\end_layout
+
+\begin_layout Quotation
+\begin_inset Quotes eld
+\end_inset
+
+Una persona resolviendo sus problemas inmediatos los verá con su problemas
+ futuros, estimados por sí mismo, como trasfondo.
+ De manera que tratará de manera que tratará de resolver sus problemas de
+ forma que minimice el tiempo total utilizado en resolver éstos y los futuros
+\begin_inset Quotes erd
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Así, una persona utilizará cualquier herramienta que le permita minimizar
+ el tiempo que dedica a una tarea, aquí entra la 
+\emph on
+ley de los dos segundos
+\emph default
+, hecha notar por 
+\begin_inset CommandInset citation
+LatexCommand citet
+key "Rhodes2000"
+
+\end_inset
+
+, a partir del corolario que establece que 
+\begin_inset Quotes eld
+\end_inset
+
+incrementar el esfuerzo involucrado en llevar a cabo una tarea, causará
+ un decremento proporcional en el numero de veces que ésta se lleva a cabo
+\begin_inset Quotes erd
+\end_inset
+
+ prescribe que, si una herramienta presenta una ganancia 
+\emph on
+al menos de dos segundos
+\emph default
+ por sobre otras, será elegida como mejor alternativa.
+ De esta manera, una interfaz de asistencia a la tarea principal de un usuario
+ debe poder presentar la información con mayor rapidez que otras opciones,
+ como el uso directo de motores de búsqueda, por ejemplo.
+\end_layout
+
+\begin_layout Subsection
+Interfaces para sistemas de asistencia al usuario
+\end_layout
+
+\begin_layout Standard
+En el caso concreto de los sistemas del tipo propuesto por este proyecto
+ (sistemas de recuperación oportuna de información), la tesis de doctorado
+ de 
+\begin_inset CommandInset citation
+LatexCommand citet
+key "Rhodes2000"
+
+\end_inset
+
+ estudia a fondo la experiencia del usuario y cómo el diseño de la interfaz
+ la afecta, y asegura que:
+\end_layout
+
+\begin_layout Quotation
+\begin_inset Quotes eld
+\end_inset
+
+Los 
+\emph on
+JITIRs
+\emph default
+ deben permitir a una persona concentrar su atención en su tarea primaria
+ y a la vez dejar que la atención pueda ser dividida entre la tarea primaria
+ y las recomendaciones.
+\begin_inset Quotes erd
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Para que esta aseveración sea realizable, se debe encontrar un equilibrio
+ entre la 
+\emph on
+concentración de la atención
+\emph default
+ del usuario y presentar la interfaz de recomendaciones de una manera que
+ permita distinguirla del ambiente de la tarea primaria o ignorarla cuando
+ ya no se desee o necesite información; y, a la vez, la interfaz no debe
+ ser tan disímil como para exigir un cambio mental de contexto tan grande
+ que la tarea principal sea dejada de lado.
+ 
+\end_layout
+
+\begin_layout Standard
+Para que este equilibrio sea conseguido, la transición entre la tarea principal
+ y la revisión y uso de recomendaciones debe ser lo menos brusca posible.
+ 
+\end_layout
+
+\begin_layout Standard
+Desde un punto de vista estético, esto se puede conseguir aprovechando el
+ hecho de que 
+\emph on
+los usuarios exploran las páginas web desde arriba a la izquierda hasta
+ abajo a la derecha
+\emph default
+ 
+\begin_inset CommandInset citation
+LatexCommand citep
+key "Pressman2006"
+
+\end_inset
+
+.
+ Así, teniendo en cuenta que la interfaz de recomendación debe ser tanto
+ accesible como no intrusiva, se recomienda ubicarla a la derecha del área
+ de trabajo principal.
+ También, se sugiere elegir colores en el rango cromático de la interfaz
+ principal, de manera que se sepa que está relacionada y que, al mismo tiempo,
+ no se distraiga la atención por ser demasiado distinta.
+\end_layout
+
+\begin_layout Standard
+Desde el punto de vista funcional, 
+\begin_inset CommandInset citation
+LatexCommand citet
+key "Rhodes2000"
+
+\end_inset
+
+ sugiere el uso de 
+\emph on
+interfaces incrementales
+\emph default
+.
+ En las cuales:
+\end_layout
+
+\begin_layout Quotation
+\begin_inset Quotes eld
+\end_inset
+
+Cada etapa provee un poco más de información, al costo de requerir un poco
+ más de atención para leerla y entenderla
+\begin_inset Quotes erd
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+La idea de una interfaz de esta naturaleza es que permita al usuario decidir
+ si vale la pena dividir su atención entre su tarea principal y las recomendacio
+nes, reduciendo así el riesgo de afectar la concentración del usuario en
+ vano.
+ El mismo autor 
+\begin_inset CommandInset citation
+LatexCommand citep
+key "Rhodes2000"
+
+\end_inset
+
+ muestra el ejemplo de seis etapas en una interfaz incremental en su sistema
+ 
+\emph on
+Margin notes
+\emph default
+, las cuales se reproducen a continuación
+\end_layout
+
+\begin_layout Enumerate
+
+\emph on
+Ninguna Acción: 
+\emph default
+el agente asistente decide qué hacer (no mostrar la interfaz o librarla
+ de elementos distrayentes).
+\end_layout
+
+\begin_layout Enumerate
+
+\emph on
+Existen recomendaciones: 
+\emph default
+la interfaz se muestra en la periferia.
+\end_layout
+
+\begin_layout Enumerate
+
+\emph on
+Gráfico de relevancia
+\emph default
+.
+ la interfaz muestra un histograma de los resultados.
+\end_layout
+
+\begin_layout Enumerate
+
+\emph on
+Tópicos.
+
+\emph default
+ El usuario puede ver los tópicos detectados por el asistente.
+\end_layout
+
+\begin_layout Enumerate
+
+\emph on
+Palabras Clave
+\emph default
+.
+ Para cada resultado, el usuario puede ver las palabras clave que hicieron
+ que se diera.
+\end_layout
+
+\begin_layout Enumerate
+
+\emph on
+Visualizar el recurso
+\emph default
+.
+ El usuario decide leer la recomendación
+\end_layout
+
+\begin_layout Standard
+Además de la interfaz incremental para este tipo de sistemas, el diseñador
+ de interfaces habrá de tener en cuenta lineamientos generales de eficiencia
+ de uso, como los siguientes (tomados de 
+\begin_inset CommandInset citation
+LatexCommand citet
+key "Pressman2006"
+
+\end_inset
+
+):
+\end_layout
+
+\begin_layout Enumerate
+
+\emph on
+Reducir el esfuerzo: 
+\emph default
+puesto que el propósito de un sistema de este tipo es asistir al usuario,
+ es inconsecuente que el uso del mismo suponga una distracción considerable
+ de la tarea principal.
+\end_layout
+
+\begin_layout Enumerate
+
+\emph on
+Facilidad de aprendizaje
+\emph default
+: lo cual se logra siguiendo los estándares impuestos por sistemas similares
+ familiares al usuario.
+\end_layout
+
+\begin_layout Enumerate
+
+\emph on
+Reducción de latencia: 
+\emph default
+dependiente de la implementación, debe estar a la altura de las expectativas
+ del usuario en cuanto a tiempo de respuesta.
+\end_layout
+
+\begin_layout Enumerate
+
+\emph on
+Legibilidad y accesibilidad: 
+\emph default
+donde la elección de colores, fuentes y dimensiones entra en juego, de manera
+ que la interfaz sea lo más 
+\emph on
+usable 
+\emph default
+posible.
+\end_layout
+
+\begin_layout Enumerate
+
+\emph on
+Comunicación: 
+\emph default
+dando retroalimentación al usuario donde sea necesario, de modo que éste
+ sepa que la interfaz funciona correctamente.
+\end_layout
+
 \begin_layout Chapter
 Planificación
 \end_layout
 
 \begin_layout Standard
-
+[TODO]
 \end_layout
 
 \begin_layout Chapter
@@ -10941,145 +11368,26 @@ name "sub:interface-design"
 \end_layout
 
 \begin_layout Standard
-En esta etapa se deben considerar los aspectos de la interacción con el
- usuario que afecten su apreciación, y consecuente juicio de utilidad, del
- sistema -asumiendo el uso de la interfaz provista por el servicio.
- Esta interacción se puede considerar mediante los siguientes aspectos:
- la interfaz en sí, cómo está ésta diseñada estéticamente y qué contenido
- presenta.
- Éstos aspectos, aunque íntimamente relacionados, pueden, en el caso de
- una aplicación web a gran escala, considerarse en etapas independientes
- y quizá hasta por personas diferentes; en este proyecto, sin embargo, dado
- el relativamente poco porcentaje de interacción con el usuario final, se
- abordarán en un solo apartado.
+Esta sección describe el diseño de la interfaz opcional que un implementador
+ obtendrá si decide utilizar el 
+\emph on
+widget
+\emph default
+ de javascript provisto por el servicio.
 \end_layout
 
 \begin_layout Standard
-La investigación en el diseño de interfaces se ha convertido en todo un
- campo de estudio, trascendiendo lineamientos empíricos y subjetivos y tomando
- elementos de la psicología cognitiva para estudiar las experiencias de
- usuario.
- En el caso concreto de los sistemas del tipo propuesto por este proyecto
- (sistemas de recuperación oportuna de información), la tesis de doctorado
- de 
+Para no causar una división de atención contraproducente, se habrán de elegir
+ colores neutros para el diseño de la interfaz.
+ Y, tomando la idea de interfaz incremental propuesta por 
 \begin_inset CommandInset citation
 LatexCommand citet
 key "Rhodes2000"
 
 \end_inset
 
- estudia a fondo la experiencia del usuario y cómo el diseño de la interfaz
- la afecta, y asegura que:
-\end_layout
-
-\begin_layout Quotation
-\begin_inset Quotes eld
-\end_inset
-
-Los 
-\emph on
-JITIRs
-\emph default
- deben permitir a una persona concentrar su atención en su tarea primaria
- y a la vez dejar que la atención pueda ser dividida entre la tarea primaria
- y las recomendaciones.
-\begin_inset Quotes erd
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-Para que esta aseveración sea realizable, se debe encontrar un equilibrio
- entre la 
-\emph on
-concentración de la atención
-\emph default
- del usuario y presentar la interfaz de recomendaciones de una manera que
- permita distinguirla del ambiente de la tarea primaria o ignorarla cuando
- ya no se desee o necesite información; y, a la vez, la interfaz no debe
- ser tan disímil como para exigir un cambio mental de contexto tan grande
- que la tarea principal sea dejada de lado.
- 
-\end_layout
-
-\begin_layout Standard
-Para que este equilibrio sea conseguido, la transición entre la tarea de
- documentación del docente y la revisión y uso de recomendaciones debe ser
- lo menos brusca posible.
- 
-\end_layout
-
-\begin_layout Standard
-Desde un punto de vista estético, esto se puede conseguir aprovechando el
- hecho de que 
-\emph on
-los usuarios exploran las páginas web desde arriba a la izquierda hasta
- abajo a la derecha
-\emph default
- 
-\begin_inset CommandInset citation
-LatexCommand citep
-key "Pressman2006"
-
-\end_inset
-
-.
- Así, teniendo en cuenta que la interfaz de recomendación debe ser tanto
- accesible como no intrusiva, se ubicará a la derecha del área de trabajo
- principal.
- También, se elegirán colores en el rango cromático de la interfaz principal,
- de manera que se sepa que está relacionada y que, al mismo tiempo, no se
- distraiga la atención por ser demasiado distinta.
-\end_layout
-
-\begin_layout Standard
-Y desde el punto de vista funcional, 
-\begin_inset CommandInset citation
-LatexCommand citet
-key "Rhodes2000"
-
-\end_inset
-
- sugiere el uso de 
-\emph on
-interfaces incrementales
-\emph default
-.
- En las cuales:
-\end_layout
-
-\begin_layout Quotation
-\begin_inset Quotes eld
-\end_inset
-
-Cada etapa provee un poco más de información, al costo de requerir un poco
- más de atención para leerla y entenderla
-\begin_inset Quotes erd
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-La idea de una interfaz de esta naturaleza es que permita al usuario decidir
- si vale la pena dividir su atención entre su tarea principal y las recomendacio
-nes, reduciendo así el riesgo de afectar la concentración del usuario en
- vano.
- El mismo autor 
-\begin_inset CommandInset citation
-LatexCommand citep
-key "Rhodes2000"
-
-\end_inset
-
- muestra el ejemplo de seis etapas en una interfaz incremental en su sistema
- 
-\emph on
-Margin notes
-\emph default
-.
- Una adaptación de éstas al proyecto actual se describe a continuación:
+ que presenta seis etapas del uso de una interfaz a la cual dirige paulatinament
+e su atención, se adaptaron éstas al presente proyecto de la siguiente manera:
 \end_layout
 
 \begin_layout Enumerate
@@ -11088,10 +11396,9 @@ Margin notes
 No hay interfaz visible
 \emph default
 .
- En este momento el agente de recomendación está o recuperando información
- del perfil del curso, decidiendo si la información en el contexto actual
- es suficiente como para llevar a cabo una búsqueda o realizando la búsqueda
- en sí.
+ En este momento el agente de recomendación está o decidiendo si la información
+ en el contexto actual es suficiente como para llevar a cabo una búsqueda
+ o realizando la búsqueda en sí.
  Puesto que no existen recomendaciones que mostrar, sería del todo contraproduce
 nte distraer al usuario con cualquier especie de contenido visual.
  El autor se había sentido tentado a utilizar una barra de progreso o una
@@ -11148,6 +11455,9 @@ reference "fig:stage2_hint"
 \end_inset
 
  para un prototipo de cómo se vería la interfaz en este estado.
+ Siguiendo los lineamientos de la ley de Fitt, se ha decidido ubicar esta
+ pestaña en el borde de la pantalla, haciendo así la navegación a esta más
+ rápida.
 \end_layout
 
 \begin_layout Enumerate
@@ -11214,53 +11524,9 @@ Además de las etapas de interfaz incremental de las recomendaciones en relació
 Reducir el esfuerzo
 \emph default
 .
- La ley de Fitt, citada por 
-\begin_inset CommandInset citation
-LatexCommand citet
-key "Pressman2006"
-
-\end_inset
-
-, establece que: 
-\begin_inset Quotes eld
-\end_inset
-
-El tiempo para adquirir un objetivo es una función de la distancia a la
- que se halla y de su tamaño [donde los elementos en los bordes se pueden
- considerar de tamaño infinito hacia el lado del borde]
-\begin_inset Quotes erd
-\end_inset
-
-, ésta, aunada a la 
-\emph on
-ley de los dos segundos
-\emph default
-, hecha notar por 
-\begin_inset CommandInset citation
-LatexCommand citet
-key "Rhodes2000"
-
-\end_inset
-
-, que establece que el umbral aceptable para llevar a cabo una sub-tarea
- -esto es, cualquier tarea que no forme parte de la tarea principal - es
- de dos segundos, puesto que 
-\begin_inset Quotes eld
-\end_inset
-
-incrementar el esfuerzo involucrado en llevar a cabo una tarea, causará
- un decremento proporcional en el numero de veces que ésta se lleva a cabo
-\begin_inset Quotes erd
-\end_inset
-
-, la interfaz de recomendación permitirá seleccionar fácilmente las recomendacio
-nes y agregarlas con un botón que se encuentre en la muestra documental
- -o quizá agregar varias con un botón cercano a la lista de sugerencias.
- Como alternativa, el usuario podría elegir una recomendación y 
-\emph on
-arrastrarla
-\emph default
- al área de trabajo principal.
+ La interfaz de recomendación permitirá seleccionar fácilmente las recomendacion
+es y agregarlas con un botón que se encuentre en la muestra documental -o
+ quizá agregar varias con un botón cercano a la lista de sugerencias.
  
 \end_layout
 
@@ -11323,10 +11589,10 @@ minimalismo
  distracción, con fuentes de tamaño y color legibles, y sumarios lo suficienteme
 nte cortos como para ser comprendidos pero no incurrir en una sobrecarga
  de información.
- Asimismo, otra motivación para un diseño minimalista es lo poco deseable
- que, dada alguna configuración de pantalla relativamente estándar, el contenido
- tenga tan poco espacio que una barra de desplazamiento deba ser agregada
- por el navegador.
+ Otra motivación para un diseño minimalista es lo poco deseable que, dada
+ alguna configuración de pantalla relativamente estándar, el contenido tenga
+ tan poco espacio que una barra de desplazamiento deba ser agregada por
+ el navegador.
  Esto porque los usuarios encuentran indeseable este tipo de comportamiento
  
 \begin_inset CommandInset citation
@@ -11344,14 +11610,8 @@ key "Pressman2006"
 Comunicación
 \emph default
 : Hacer saber al usuario cuándo, en base a un cambio de contexto, se han
- determinado nuevas sugerencias.
- Se parte del supuesto que, una vez que el usuario vuelva a su tarea primaria,
- la interfaz se esconderá de su vista.
- En caso de que siempre permaneciese abierta quizá sería mejor, en vez de
- actualizarla automáticamente, comunicar explícitamente la situación mediante
- un aviso conspicuo.
- Asimismo, la interfaz debe permitir al usuario ver recomendaciones anteriores
- de una manera fácilmente navegable.
+ determinado nuevas sugerencias mediante un aviso conspicuo.
+ 
 \end_layout
 
 \begin_layout Standard
