--- a/MarcoTeorico_10611066.lyx
+++ b/MarcoTeorico_10611066.lyx
@@ -15615,7 +15615,7 @@ Plan de proyecto
 	template PDFPages
 	filename /home/lfborjas/PDF/Java_Printing.pdf
 	display false
-	extra LaTeX "pages=1-6"
+	extra LaTeX "pages={1,2,4,5}"
 
 \end_inset
 
